syntax = "proto3";
package m2g.pb;

enum ResourceType {
  NO_RESOURCE = 0;
  RESOURCE_HP = 1;
}
